# Json_Normalize

./: CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  requirements.txt  test.ipynb  test.py
core/: __init__.py  dedup.py  flattener.py  null_handler.py  relation.py  transformer.py  type_cast.py
docs/: API_Reference.md  Core_Module.md  Design.md  Folder_Structure.md  User_Guide.md  Utils_Module.md  Workflow.md
examples/: example_basic.py  example_helpers.py  example_nn_nested.py  example_relation.py  example_relational.py  example_schema.py
tests/: test.json  test.py  test_comprehensive.py
utils/: config.py  error_handler.py  naming.py  validation.py
